Changelog
=========

1.0.8 (unreleased)
------------------

- Nothing changed yet.


1.0.7 (2013-08-13)
------------------

- Add optional force parameter to the validate method to match a change
  in the z3c.form API.


1.0.6 (2013-05-26)
------------------

* added dutch translation
  [maartenkling]

1.0.5 (2013-03-05)
------------------

- Nothing changed yet.


1.0.4 (2013-01-01)
------------------

* added french translation
  [tschanzt]

* added danish translation
  https://github.com/plone/plone.formwidget.namedfile/pull/2
  [tmog]

1.0.3 (2012-10-09)
------------------

* Use download_url for display templates also
  [lentinj]

* Fix the download view for widgets whose form has a custom getContent method.
  [davisagli]

1.0.2 (2011-09-24)
------------------
* Added Simplified Chinese translation.
  [jianaijun]

* Added pt_BR translation.
  [rafaelbco, davisagli]

* Additional unit tests for download view
  [lentinj]

1.0.1 (2011-07-02)
------------------

* Don't need to ask parent for widget name anymore, since ++widget++ traverser
  will understand full widget names.
  [lentinj]

1.0 (2011-04-30)
----------------

* Allow field widget to display without absolute_url.
  [elro]

1.0b10 (2011-03-02)
-------------------

* Use what the parent considers to be the widget name if available.
  Without which named images in dexterity behaviors break.
  [lentinj, elro]

1.0b9 (2011-02-11)
------------------

* Fix handling of unicode filenames when converting or quoting the URL.
  Fixes http://code.google.com/p/dexterity/issues/detail?id=148
  [rossp, mj]

* Added Spanish translations.
  [dukebody]

* Added german translations.
  [jbaumann]


1.0b8 (2010-10-01)
------------------

* Avoid showing validation errors during KSS validation, as the file is not
  uploaded in this case.
  [davisagli]

* Don't use the action from the request when the form submission succeeded.
  (In that case we always want "keep existing image")
  [davisagli]

1.0b7 (2010-08-05)